--- a/defense/abbr.tex
+++ b/defense/abbr.tex
@@ -74,3 +74,15 @@ align=center,fill=propa-grey]
 \newcommand{\cgreen}[1]{{\color{hgreen}#1}}
 \newcommand{\cblue}[1]{{\color{blue!80}#1}}
 \newcommand{\cprop}[1]{{\color{orange}#1}}
+
+\newcommand{\minisat}{\texttt{MiniSAT}}
+\newcommand{\breakid}{\texttt{breakID}}
+\newcommand{\shatter}{\texttt{Shatter}}
+\newcommand{\cdclsym}{\texttt{MiniSym}}
+\newcommand{\libdsb}{\textsf{cosy}}
+\newcommand{\bliss}{\texttt{bliss}}
+\newcommand{\saucy}{\texttt{saucy3}}
+\newcommand{\unsat}{\textsc{unsat}\xspace}
+\newcommand{\sat}{\textsc{sat}\xspace}
+\newcommand{\ltv}{\ensuremath{<_{\scriptsize\mathcal{V}}}}
+%\newcommand{\lto}{\ensuremath{<_{\scriptsize v}}}
